[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/shots/BurnHandler.gd" type="Script" id=1]

[node name="BurnHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="BlackTween" type="Tween" parent="."]

[node name="TransparentTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="BlackTween" to="." method="_on_BlackTween_tween_all_completed"]
[connection signal="tween_all_completed" from="TransparentTween" to="." method="_on_TransparentTween_tween_all_completed"]
